--- a/layout.css
+++ b/layout.css
@@ -1,24 +1,57 @@
-fieldset {
-  width: 75%;
-  margin: 50px auto;
+body {
+  background-color: rgb(61, 56, 56);
 }
 
-#main-form {
-  width: 50%;
-  margin: 10px auto;
+fieldset {
+  background-color: gray;
+  width: 40%;
+  margin: 50px auto;
   display:flex;
   flex-direction:column;
+  justify-content:space-between;
   align-items:center;
+  line-height:20px;
+}
+
+div{
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 legend {
   border: 1px solid black;
   margin-left: 100px;
+  background-color: gray;
 }
 
-input, #comments{
-  display:block;
+input[type="text"], input[type="email"], textarea, .status-date{
+  width: 100%;
 }
-#html,#css,#javascript{
+
+.status-date, #news-terms{
+  display:flex;
+  flex-direction:row;
+  justify-content:center;
+  align-items:center;
+}
+
+#status, #dates {
+  flex-grow:2;
+  display:flex;
+  flex-direction:column;
+}
+#status-date-blank {
+  flex-grow:1;
+}
+
+
+label[for="signup"], label[for="terms"]{
+  width:30%;
+}
+
+
+
+/* #html,#css,#javascript,#signup,#terms{
   display:inline-block;
-}
+} */
